--- a/.gitconfig
+++ b/.gitconfig
@@ -23,3 +23,9 @@
   hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
   type = cat-file -t
   dump = cat-file -p
+[push]
+  default = tracking
+[merge]
+  tool = opendiff
+[mergetool "opendiff"]
+  trustExitCode = true
